compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_exclamation_mark.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() { ！= True }"
---
----- SOURCE CODE
pub fn main() { ！= True }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { ！= True }
  │                 ^^ I can't figure out what to do with this character

Hint: Is it a typo?
